--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "url": "https://github.com/meanjs/mean.git"
   },
   "engines": {
-    "node": ">=0.10.28",
-    "npm": ">=1.4.28"
+    "node": ">=0.10.28"
   },
   "scripts": {
     "start": "grunt",
