update package.json to run 'grunt build' before 'grunt prod'

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node": ">=0.10.28"
   },
   "scripts": {
-    "start": "grunt",
+    "start": "grunt build && grunt prod",
     "test": "grunt test",
     "postinstall": "bower install --config.interactive=false"
   },
