--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/meanjs/mean.git"
   },
   "engines": {
-    "node": ">=0.10.28"
+    "node": "0.12.7"
   },
   "scripts": {
     "start": "grunt build && grunt prod",
