--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
+    "grunt-contrib-sass": "~0.9.2",
+    "grunt-sass": "~0.17.0",
+    "gulp-sass": "^2.0.3",
     "validator": "^3.41.2"
   },
   "devDependencies": {
